--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,7 @@
     <!-- [if lte IE 8]>
       <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2-legacy.js"></script>
     [endif] -->
-    <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2.js"></script>
+    <script charset="utf-8" type="text/javascript" src="https://js.hsforms.net/forms/v2.js"></script>
     <script>
       hbspt.forms.create({
     	region: "na1",
@@ -19,7 +19,6 @@
     	formId: "63469947-8d9a-4313-b370-eaf2b7c7ac51"
       });
     </script>
-
     <title>Modern Commerce Landscape</title>
   </head>
   <body>
@@ -68,7 +67,7 @@
         <section class="section-left">
           <h1 class="prompt">Next, select your vendor shortlist.</h1>
           <!-- <h2>Click each block to view its category landscape:</h2> -->
-          <div class="lego-box">
+          <div id="lego-box">
             <img src="images/icons/category.png"/>
             <div id="legos">
             </div>
@@ -79,13 +78,11 @@
               <div id="companies-box">
               </div>
             </section>
-            <section id="filters-and-details">
-              <div id="filters">
-                <h1>Filters:</h1>
-              </div>
-              <div class="hidden" id="company-details">
-              </div>
+            <section id="filters">
+              <h1>Filters:</h1>
             </section>
+              <!-- <div class="hidden" id="company-details">
+              </div> -->
           </section>
         </section>
         <section class="section-right">
