--- a/www/index.html
+++ b/www/index.html
@@ -80,8 +80,6 @@
             <section id="filters">
               <h1>Filters:</h1>
             </section>
-              <!-- <div class="hidden" id="company-details">
-              </div> -->
           </section>
         </section>
         <section class="section-right">
@@ -89,7 +87,7 @@
           <h2 id="section-right-description-2">Your selection is currently empty.</h2>
           <section id="selected-companies">
           </section>
-          <button id="pdf-button" class="btn-deselected">Generate PDF</button>
+          <button id="pdf-button" class="btn-deselected">Generate Summary</button>
         </section>
       </section>
     </main>
