first MVP version

--- a/www/index.html
+++ b/www/index.html
@@ -7,18 +7,6 @@
     <link href="styles/style.css" rel="stylesheet"/>
     <script type="text/javascript" src="scripts/data.js"></script>
     <script type="text/javascript" src="scripts/index.js"></script>
-
-    <!-- [if lte IE 8]>
-      <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2-legacy.js"></script>
-    [endif] -->
-    <script charset="utf-8" type="text/javascript" src="https://js.hsforms.net/forms/v2.js"></script>
-    <script>
-      hbspt.forms.create({
-    	region: "na1",
-    	portalId: "4784080",
-    	formId: "63469947-8d9a-4313-b370-eaf2b7c7ac51"
-      });
-    </script>
     <title>Modern Commerce Landscape</title>
   </head>
   <body>
@@ -41,6 +29,7 @@
       </nav>
       <p id="website-description">
         <a class="text-link" href="https://www.gartner.com/en/documents/3986490/composable-commerce-must-be-adopted-for-the-future-of-ap" target="_blank">Composable Commerce</a> is great but it requires selecting multiple vendors. This website summarizes the e-commerce landscape, allowing you to explore vendors you might be interested in working with.
+      </p>
     </header>
     <main>
       <section class="two-column" id="category-select">
@@ -87,6 +76,7 @@
           <h2 id="section-right-description-2">Your selection is currently empty.</h2>
           <section id="selected-companies">
           </section>
+          <button id="hubspot-button" class="hubspot-btn">Add Contact</button>
           <button id="pdf-button" class="btn-deselected">Generate Summary</button>
         </section>
       </section>
